--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "chatgptapp",
+    "name" : "GPT-TODO",
     "appid" : "__UNI__A519593",
-    "description" : "",
+    "description" : "应用内有chatgpt功能和todolist功能",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -47,6 +47,9 @@
             /* SDK配置 */
             "sdkConfigs" : {
                 "ad" : {}
+            },
+            "splashscreen" : {
+                "androidStyle" : "common"
             }
         }
     },
@@ -72,5 +75,6 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "fallbackLocale" : "zh-Hans"
 }
